# Yukon-Solitaire

./: .gitignore  CMakeLists.txt  PROJECT_SPEC.md  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  TEAM_RULES.md  test.c
docs/: FINAL_VALIDATION.md  GUI_ARCHITECTURE.md  QUALITY_CHECKS.md  SUBMISSION_CHECKLIST.md
docs/report/: CONTRIBUTIONS_TEMPLATE.md  REPORT_TEMPLATE.md
include/: app.h  best_time.h  card.h  command_engine.h  deck_io.h  game.h  game_setup.h  game_state_io.h  list.h  move.h  parser.h  render.h  shuffle.h  timer.h
src/cli/: app.c  main.c  parser.c  render.c
src/core/: best_time.c  card.c  command_engine.c  deck_io.c  game.c  game_setup.c  game_state_io.c  list.c  move.c  shuffle.c  timer.c
src/gui/: bridge.c  tk_yukon.py
test-data/: invalid_bad_code.txt  invalid_duplicate_deck.txt  invalid_short_deck.txt
tests/: MANUAL_TESTS.md
